--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/neverendingqs/netlify-express#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
+    "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   },
