--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/neverendingqs/netlify-express#readme",
   "dependencies": {
+    "@slack/bolt": "^3.10.0",
     "cheerio": "^1.0.0-rc.10",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
