--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "homepage": "https://github.com/neverendingqs/netlify-express#readme",
   "dependencies": {
     "@slack/bolt": "^3.10.0",
+    "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.10",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "lodash": "^4.17.21",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   },
