--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@slack/bolt": "^3.10.0",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.10",
+    "cors": "^2.8.5",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
